test_files/good/loop.ru
A => B
B + D => C
C => A

?ABC
=D