test_files/bad/bad_definition.ru
def a "Salut" "les TEsts

A + a => c

?a